Fix hero text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ header .subtitle {
     margin-right: auto;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+    text-align: center; 
 }
 
 nav {
